# ai-rename-tool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release-please.yml  sbom.yml
ai_rename_tool/: cli.py  naming.py
docs/: api-core.md  api-naming.md  api.md  architecture.md  contributing.md  getting-started.md  index.md  usage.md
scripts/: bootstrap-venv.sh  smoke.sh
src/ai_rename_tool/: __init__.py  core.py  naming.py  provider.py
tests/: test_core.py  test_naming.py
