[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-rename-tool"
description = "Fast, safe file renamer with AI-ready interface, deterministic plans, and undo."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Kris", email = "example@example.com"}]
keywords = ["rename", "files", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/your-org/ai-rename-tool"
Repository = "https://github.com/your-org/ai-rename-tool"

[project.scripts]
ai-rename-tool = "ai_rename_tool.cli:main"

[tool.setuptools]
packages = ["ai_rename_tool"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.0"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
extend-select = ["E", "F", "I", "UP", "B", "SIM", "C4", "S"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ai_rename_tool"]
combine-as-imports = true
